[gd_scene load_steps=35 format=3 uid="uid://ddywb4q21bl8q"]

[ext_resource type="Script" uid="uid://dvc571iw7mco2" path="res://Scripts/Player/player.gd" id="1_jlvik"]
[ext_resource type="PackedScene" uid="uid://cmfih1x4exhxd" path="res://Scenes/Projectile/projectile.tscn" id="2_74mp2"]
[ext_resource type="Shader" uid="uid://dlv7ui184tejt" path="res://Scenes/UI/Shaders/player.gdshader" id="3_aqm4k"]
[ext_resource type="Texture2D" uid="uid://3buwbwlo4tpq" path="res://Assets/damagetake/take dano2.png" id="3_hnuln"]
[ext_resource type="Texture2D" uid="uid://bxi7kqvnexpde" path="res://Assets/damagetake/take dano.png" id="4_aqm4k"]
[ext_resource type="Texture2D" uid="uid://pkmsm11u38yn" path="res://Assets/idle/idle1.png" id="4_oikmp"]
[ext_resource type="Texture2D" uid="uid://b5agddlh7q30h" path="res://Assets/idle/idle2.png" id="5_06tpx"]
[ext_resource type="Script" uid="uid://cwhs5iygubus7" path="res://Scripts/Player/state_machine.gd" id="5_74mp2"]
[ext_resource type="Texture2D" uid="uid://yptcgqaum8ap" path="res://Assets/lançar/Anda pra dir/andagato2.png" id="5_r5xpd"]
[ext_resource type="Texture2D" uid="uid://4xa4vfj8hxk7" path="res://Assets/lançar/Anda pra dir/andagato.png" id="6_ks1b7"]
[ext_resource type="Script" uid="uid://b7kb621o3nwmp" path="res://Scripts/Player/move.gd" id="6_oikmp"]
[ext_resource type="Script" uid="uid://b7smg1poxuvqr" path="res://Scripts/Player/idle.gd" id="7_06tpx"]
[ext_resource type="Texture2D" uid="uid://b8m4aa5gmieui" path="res://Assets/lançar/lança1.png" id="7_7g0yx"]
[ext_resource type="Texture2D" uid="uid://dnygoytq15h4h" path="res://Assets/lançar/lança2.png" id="8_dey5f"]
[ext_resource type="Script" uid="uid://dqejc88rc22xm" path="res://Scripts/Player/shoot.gd" id="9_jhyir"]
[ext_resource type="Script" uid="uid://c5smcjxg8gfg6" path="res://Scripts/Player/hurt.gd" id="10_74mp2"]
[ext_resource type="Script" uid="uid://c06322uj47wna" path="res://Scenes/Player/bola.gd" id="11_r5xpd"]
[ext_resource type="Texture2D" uid="uid://caeg8tmqaima8" path="res://Scenes/UI/Shaders/bola.png" id="12_aqm4k"]
[ext_resource type="Texture2D" uid="uid://fnhwd7kfkd3u" path="res://Scenes/UI/Shaders/bola2.png" id="13_rcvs5"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_rcvs5"]
shader = ExtResource("3_aqm4k")
shader_parameter/base_alpha = 0.347
shader_parameter/beam_color = Color(0.301961, 0.8, 1, 0)
shader_parameter/thickness = 1.839
shader_parameter/edge_softness = 0.2
shader_parameter/pulse_strength = 0.2
shader_parameter/pulse_speed = 20.0
shader_parameter/min_alpha_factor = 0.4

[sub_resource type="AtlasTexture" id="AtlasTexture_rcvs5"]
atlas = ExtResource("4_aqm4k")
region = Rect2(0, 0, 652, 533)

[sub_resource type="AtlasTexture" id="AtlasTexture_oikmp"]
region = Rect2(0, 0, 320, 320)

[sub_resource type="AtlasTexture" id="AtlasTexture_06tpx"]
region = Rect2(320, 0, 320, 320)

[sub_resource type="AtlasTexture" id="AtlasTexture_ei2r2"]
region = Rect2(640, 0, 320, 320)

[sub_resource type="AtlasTexture" id="AtlasTexture_j6uq4"]
region = Rect2(960, 0, 320, 320)

[sub_resource type="AtlasTexture" id="AtlasTexture_h5u0x"]
region = Rect2(1280, 0, 320, 320)

[sub_resource type="AtlasTexture" id="AtlasTexture_po18e"]
region = Rect2(1600, 0, 320, 320)

[sub_resource type="SpriteFrames" id="SpriteFrames_gxkwu"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_hnuln")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rcvs5")
}],
"loop": true,
"name": &"hurt",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_oikmp")
}, {
"duration": 1.0,
"texture": ExtResource("5_06tpx")
}],
"loop": true,
"name": &"idle",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_oikmp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_06tpx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ei2r2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j6uq4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h5u0x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_po18e")
}],
"loop": true,
"name": &"immortal",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_r5xpd")
}, {
"duration": 1.0,
"texture": ExtResource("6_ks1b7")
}],
"loop": true,
"name": &"move",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("7_7g0yx")
}, {
"duration": 1.0,
"texture": ExtResource("8_dey5f")
}],
"loop": false,
"name": &"shoot",
"speed": 8.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_ks1b7"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("12_aqm4k")
}, {
"duration": 1.0,
"texture": ExtResource("13_rcvs5")
}],
"loop": true,
"name": &"default",
"speed": 2.1
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_xo5na"]
radius = 256.97
height = 513.94

[sub_resource type="LabelSettings" id="LabelSettings_hnuln"]
font_size = 200

[sub_resource type="CircleShape2D" id="CircleShape2D_gk6dx"]
radius = 373.976

[sub_resource type="CircleShape2D" id="CircleShape2D_jhyir"]
radius = 375.215

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_7g0yx"]
polygon = PackedVector2Array(-188.342, -135.371, -155.971, 67.6854, -163.328, 86.8139, -122.128, 248.67, 183.928, 247.199, 205.999, 180.985, 105.942, 80.9282, 169.213, -36.7855, 198.642, -201.585, 60.3283, -208.942, 80.9282, -242.785, -52.9712, -258.97)

[node name="Player" type="CharacterBody2D" groups=["player"]]
collision_layer = 130
collision_mask = 181
script = ExtResource("1_jlvik")
projectile_scene = ExtResource("2_74mp2")

[node name="TrajectoryPreview" type="Line2D" parent="."]
material = SubResource("ShaderMaterial_rcvs5")
width = 80.0
default_color = Color(1, 1, 1, 0.486275)
texture_mode = 2
begin_cap_mode = 2
end_cap_mode = 2
antialiased = true

[node name="AimRayCast" type="RayCast2D" parent="."]
collision_mask = 133

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_gxkwu")
animation = &"shoot"

[node name="bola" type="AnimatedSprite2D" parent="."]
position = Vector2(-34, -352)
sprite_frames = SubResource("SpriteFrames_ks1b7")
frame_progress = 0.00596831
script = ExtResource("11_r5xpd")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(2, 1)
shape = SubResource("CapsuleShape2D_xo5na")

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("starting_state")]
script = ExtResource("5_74mp2")
starting_state = NodePath("idle")

[node name="move" type="Node" parent="StateMachine" node_paths=PackedStringArray("shoot_state", "idle_state")]
script = ExtResource("6_oikmp")
shoot_state = NodePath("../shoot")
idle_state = NodePath("../idle")
animation_name = "move"

[node name="idle" type="Node" parent="StateMachine" node_paths=PackedStringArray("shoot_state", "move_state", "hurt_state")]
script = ExtResource("7_06tpx")
shoot_state = NodePath("../shoot")
move_state = NodePath("../move")
hurt_state = NodePath("../hurt")
animation_name = "idle"

[node name="shoot" type="Node" parent="StateMachine" node_paths=PackedStringArray("idle_state", "move_state", "hurt_state")]
script = ExtResource("9_jhyir")
idle_state = NodePath("../idle")
move_state = NodePath("../move")
hurt_state = NodePath("../hurt")
animation_name = "shoot"

[node name="hurt" type="Node" parent="StateMachine" node_paths=PackedStringArray("idle_state")]
script = ExtResource("10_74mp2")
idle_state = NodePath("../idle")
animation_name = "hurt"

[node name="State" type="Label" parent="."]
visible = false
offset_left = -25.0
offset_top = -76.0
offset_right = 15.0
offset_bottom = -53.0
label_settings = SubResource("LabelSettings_hnuln")
metadata/_edit_use_anchors_ = true

[node name="Hurtbox" type="Area2D" parent="."]
collision_layer = 64
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
shape = SubResource("CircleShape2D_gk6dx")

[node name="Collector" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="Collector"]
shape = SubResource("CircleShape2D_jhyir")

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]
visible = false
show_behind_parent = true
occluder = SubResource("OccluderPolygon2D_7g0yx")

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
offset_left = -74.0
offset_top = -80.0
offset_right = 78.0
offset_bottom = 72.0
color = Color(0.999338, 0.823746, 0.88451, 1)

[node name="ShootPoint" type="Marker2D" parent="."]
position = Vector2(0, -2.94284)
scale = Vector2(19490.2, 209000)

[node name="Recalls" type="Label" parent="."]
offset_left = 326.0
offset_top = -301.0
offset_right = 366.0
offset_bottom = -253.0

[connection signal="body_entered" from="Hurtbox" to="." method="_on_hurtbox_body_entered"]
[connection signal="area_entered" from="Collector" to="." method="_on_collector_area_entered"]
